crates/keron-lang/tests/corpus/errors/check/fn_duplicate_param.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: duplicate parameter `a`
  --> 1:14
  |
1 | fn f(a: Int, a: Int): Int {
  |              ^
